[336] Resolve Sonar issues
Change-Id: I617957b1d3c0349a2461ff3d35ed4113b2ea573f
Signed-off-by: Joao Barata <jean.barata@thalesgroup.com>