@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2014 THALES GLOBAL SERVICES.
+ * Copyright (c) 2006, 2016 THALES GLOBAL SERVICES.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -48,11 +48,11 @@ public final class MiscUtil {
    * Transactional command execution helper
    * @return true if command execution did not generate a runtime exception
    */
-  public static boolean transactionallyExecute(Collection<? extends EObject> selection, ICommand cmd_p) {
+  public static boolean transactionallyExecute(Collection<? extends EObject> selection, ICommand cmd) {
     boolean result = true;
     try {
       ExecutionManager em = TransactionHelper.getExecutionManager(selection);
-      em.execute(cmd_p);
+      em.execute(cmd);
     } catch(RuntimeException e) {
       result = false;
     }
@@ -63,11 +63,11 @@ public final class MiscUtil {
    * Retrieve a cross referencer which covers all domain layers:
    * Capella, Sirius, GMF.
    * It is probably the one which is used by the Query Legacy interpreter.
-   * @param objectInSession_p an EObject belonging to the desired session
+   * @param objectInSession an EObject belonging to the desired session
    */
-  public static ECrossReferenceAdapter getGlobalReferencer(EObject objectInSession_p) {
+  public static ECrossReferenceAdapter getGlobalReferencer(EObject objectInSession) {
     ECrossReferenceAdapter result = null;
-    EObject semanticElement = LayerUtil.toSemanticLevel(objectInSession_p);
+    EObject semanticElement = LayerUtil.toSemanticLevel(objectInSession);
     if (semanticElement != null) {
       Session session = SessionManager.INSTANCE.getSession(semanticElement);
       if (session != null) {
@@ -91,15 +91,15 @@ public final class MiscUtil {
   /**
    * Navigate the non-navigable opposite of a reference
    */
-  public static Set<EObject> getOpposites(EObject element_p, EReference ref_p) {
-    assert ref_p != null;
+  public static Set<EObject> getOpposites(EObject element, EReference ref) {
+    assert ref != null;
     Set<EObject> result = new HashSet<EObject>();
-    ECrossReferenceAdapter referencer = getGlobalReferencer(element_p);
+    ECrossReferenceAdapter referencer = getGlobalReferencer(element);
     if (referencer != null) {
       Collection<Setting> settings =
-        referencer.getNonNavigableInverseReferences(element_p);
+        referencer.getNonNavigableInverseReferences(element);
       for (Setting setting : settings) {
-        if (ref_p.equals(setting.getEStructuralFeature()))
+        if (ref.equals(setting.getEStructuralFeature()))
           result.add(setting.getEObject());
       }
     }
@@ -110,10 +110,10 @@ public final class MiscUtil {
    * Convenience method for a specific case of getOpposites where the reference
    * is known to be injective, i.e., there exists at most one referencing element
    */
-  public static EObject getOpposite(EObject element_p, EReference ref_p) {
-    assert ref_p != null;
+  public static EObject getOpposite(EObject element, EReference ref) {
+    assert ref != null;
     EObject result = null;
-    Set<EObject> opposites = getOpposites(element_p, ref_p);
+    Set<EObject> opposites = getOpposites(element, ref);
     if (!opposites.isEmpty())
       result = opposites.iterator().next();
     return result;
@@ -123,18 +123,18 @@ public final class MiscUtil {
    * From a given element, get all settings supporting addition which are
    * outside the given set of elements or their contents
    */
-  public static List<Setting> getExternalSettingsForAddition(EObject element_p, Collection<EObject> internals_p) {
+  public static List<Setting> getExternalSettingsForAddition(EObject element, Collection<EObject> internals) {
     List<Setting> result = new ArrayList<Setting>();
-    ECrossReferenceAdapter referencer = getSemanticReferencer(element_p);
+    ECrossReferenceAdapter referencer = getSemanticReferencer(element);
     if (referencer != null) {
-      Collection<Setting> settings = referencer.getInverseReferences(element_p);
+      Collection<Setting> settings = referencer.getInverseReferences(element);
       for (Setting setting : settings) {
         if (setting.getEStructuralFeature() instanceof EReference) {
           EReference ref = (EReference)setting.getEStructuralFeature();
           if (!ref.isContainer() && !ref.isContainment() &&
               supportsAddition(ref) &&
               BusinessHelper.getInstance().updateWithDuplicatedValues(ref) &&
-              !EcoreUtil.isAncestor(internals_p, setting.getEObject()))
+              !EcoreUtil.isAncestor(internals, setting.getEObject()))
             result.add(setting);
         }
       }
@@ -145,18 +145,18 @@ public final class MiscUtil {
   /**
    * Return whether a given reference can be used to add elements 
    */
-  public static boolean supportsAddition(EReference reference_p) {
-    return reference_p != null && reference_p.isMany() &&
-    !reference_p.isDerived() && reference_p.isChangeable();
+  public static boolean supportsAddition(EReference reference) {
+    return reference != null && reference.isMany() &&
+    !reference.isDerived() && reference.isChangeable();
   }
   
   /**
    * Convert a parametric collection to another one by filtering out all
    * incompatible elements
    */
-  public static <T> List<T> filter(Iterable<?> elements_p, Class<T> type) {
+  public static <T> List<T> filter(Iterable<?> elements, Class<T> type) {
     List<T> result = new ArrayList<T>();
-    for (Object current : elements_p) {
+    for (Object current : elements) {
       if (type.isInstance(current))
         result.add(type.cast(current));
     }
@@ -168,11 +168,11 @@ public final class MiscUtil {
    * in others
    */
   public static <T extends EObject> List<T> getRoots(
-      Collection<? extends T> elements_p) {
+      Collection<? extends T> elements) {
     List<T> result = new ArrayList<T>();
-    Set<T> elements = new HashSet<T>(elements_p);
-    for (T element : elements) {
-      if (!result.contains(element) && isRootAmong(element, elements))
+    Set<T> elts = new HashSet<T>(elements);
+    for (T element : elts) {
+      if (!result.contains(element) && isRootAmong(element, elts))
         result.add(element);
     }
     return result;
@@ -182,22 +182,22 @@ public final class MiscUtil {
    * Return whether the given element is not transitively contained by any
    * of the given elements, unless it is one of the given elements.
    */
-  private static boolean isRootAmong(EObject element_p,
-      Collection<? extends EObject> elements_p) {
-    Collection<EObject> filtered = new ArrayList<EObject>(elements_p);
-    filtered.remove(element_p);
-    return !EcoreUtil.isAncestor(filtered, element_p);
+  private static boolean isRootAmong(EObject element,
+      Collection<? extends EObject> elements) {
+    Collection<EObject> filtered = new ArrayList<EObject>(elements);
+    filtered.remove(element);
+    return !EcoreUtil.isAncestor(filtered, element);
   }
   
   /**
    * Return the lowest common ancestor, in the containment hierarchy,
    * of the given set of elements
-   * @param acceptSelf_p whether the result can be any of the given elements
+   * @param acceptSelf whether the result can be any of the given elements
    */
   public static EObject getCommonAncestor(
-      Collection<? extends EObject> elements_p, boolean acceptSelf_p) {
-    if (elements_p == null || elements_p.isEmpty()) return null;
-    Iterator<? extends EObject> it = elements_p.iterator();
+      Collection<? extends EObject> elements, boolean acceptSelf) {
+    if (elements == null || elements.isEmpty()) return null;
+    Iterator<? extends EObject> it = elements.iterator();
     List<EObject> commonHierarchy = getAncestors(it.next());
     while (it.hasNext()) {
       List<EObject> currentHierarchy = getAncestors(it.next());
@@ -205,7 +205,7 @@ public final class MiscUtil {
       commonHierarchy.retainAll(currentHierarchy);
     }
     // Exclude the given elements
-    if (!acceptSelf_p) commonHierarchy.removeAll(elements_p);
+    if (!acceptSelf) commonHierarchy.removeAll(elements);
     // Take lowest ancestor in common hierarchy
     if (commonHierarchy.isEmpty()) return null;
     return commonHierarchy.get(commonHierarchy.size()-1);
@@ -214,19 +214,19 @@ public final class MiscUtil {
   /**
    * Special case of getCommonAncestor(Collection)
    */
-  public static EObject getCommonAncestor(EObject first_p, EObject second_p) {
-    if (null == first_p || null == second_p) return null;
-    return getCommonAncestor(Arrays.asList(new EObject[] {first_p, second_p}), true);
+  public static EObject getCommonAncestor(EObject first, EObject second) {
+    if (null == first || null == second) return null;
+    return getCommonAncestor(Arrays.asList(new EObject[] {first, second}), true);
   }
   
   /**
    * Return the list of ancestors including self, from higher to deeper.
    * The result is not immutable but modifying it has no other impact.
    */
-  private static List<EObject> getAncestors(EObject element_p) {
-    if (element_p == null) return new ArrayList<EObject>();
-    List<EObject> containerList = getAncestors(element_p.eContainer());
-    containerList.add(element_p);
+  private static List<EObject> getAncestors(EObject element) {
+    if (element == null) return new ArrayList<EObject>();
+    List<EObject> containerList = getAncestors(element.eContainer());
+    containerList.add(element);
     return containerList;
   }
   
@@ -237,17 +237,17 @@ public final class MiscUtil {
    * This is a more generic mechanism than the (original, copy) Map of EcoreUtil2.Copier:
    * it is bidirectional and it may relate otherwise independent elements.
    * Complexity is O(N) where N is the depth of the first root's containment tree.
-   * @param originRoot_p the first root EObject
-   * @param origin_p the EObject belonging to the eAllContents of the first EObject
-   * @param targetRoot_p the second root EObject
-   * @param filter_p an optional filter (null is accepted)
+   * @param originRoot the first root EObject
+   * @param origin the EObject belonging to the eAllContents of the first EObject
+   * @param targetRoot the second root EObject
+   * @param filter an optional filter (null is accepted)
    * @return the corresponding EObject, or null if none was found
    */
-  public static EObject getCorrespondingInStructure(EObject originRoot_p,
-      EObject origin_p, EObject targetRoot_p, Filter filter_p) {
-    assert originRoot_p != null && origin_p != null && targetRoot_p != null;
-    List<Object> path = getContainmentPath(originRoot_p, origin_p, filter_p);
-    EObject result = getFromPath(targetRoot_p, path, filter_p);
+  public static EObject getCorrespondingInStructure(EObject originRoot,
+      EObject origin, EObject targetRoot, Filter filter) {
+    assert originRoot != null && origin != null && targetRoot != null;
+    List<Object> path = getContainmentPath(originRoot, origin, filter);
+    EObject result = getFromPath(targetRoot, path, filter);
     return result;
   }
   
@@ -258,61 +258,61 @@ public final class MiscUtil {
    * This is a more generic mechanism than the (original, copy) Map of EcoreUtil2.Copier:
    * it is bidirectional and it may relate otherwise independent elements.
    * Complexity is O(N) where N is the depth of the first root's containment tree.
-   * @param originRoot_p the first root EObject
-   * @param origin_p the EObject belonging to the eAllContents of the first EObject
-   * @param targetRoot_p the second root EObject
+   * @param originRoot the first root EObject
+   * @param origin the EObject belonging to the eAllContents of the first EObject
+   * @param targetRoot the second root EObject
    * @return the corresponding EObject, or null if none was found
    */
-  public static EObject getCorrespondingInStructure(EObject originRoot_p,
-      EObject origin_p, EObject targetRoot_p) {
-    return getCorrespondingInStructure(originRoot_p, origin_p, targetRoot_p, null);
+  public static EObject getCorrespondingInStructure(EObject originRoot,
+      EObject origin, EObject targetRoot) {
+    return getCorrespondingInStructure(originRoot, origin, targetRoot, null);
   }
   
   /**
-   * This is a generalization of getCorrespondingInCopy(EObject originRoot_p,
-   * EObject origin_p, EObject targetRoot_p, Filter filter_p) with collections.
+   * This is a generalization of getCorrespondingInCopy(EObject originRoot,
+   * EObject origin, EObject targetRoot, Filter filter) with collections.
    */
-  public static EObject getCorrespondingInStructure(List<? extends EObject> originRoots_p,
-      EObject origin_p, List<? extends EObject> targetRoots_p, Filter filter_p) {
-    assert originRoots_p != null && origin_p != null && targetRoots_p != null;
+  public static EObject getCorrespondingInStructure(List<? extends EObject> originRoots,
+      EObject origin, List<? extends EObject> targetRoots, Filter filter) {
+    assert originRoots != null && origin != null && targetRoots != null;
     List<? extends EObject> filteredOriginRoots =
-      (null == filter_p)? originRoots_p: filter_p.filter(originRoots_p);
+      (null == filter)? originRoots: filter.filter(originRoots);
     List<? extends EObject> filteredTargetRoots =
-      (null == filter_p)? targetRoots_p: filter_p.filter(targetRoots_p);
+      (null == filter)? targetRoots: filter.filter(targetRoots);
     int max = Math.min(filteredOriginRoots.size(), filteredTargetRoots.size());
     for (int i=0; i<max; i++) {
-      if (EcoreUtil.isAncestor(filteredOriginRoots.get(i), origin_p)) {
-        EObject found = getCorrespondingInStructure(filteredOriginRoots.get(i), origin_p,
-            filteredTargetRoots.get(i), filter_p);
+      if (EcoreUtil.isAncestor(filteredOriginRoots.get(i), origin)) {
+        EObject found = getCorrespondingInStructure(filteredOriginRoots.get(i), origin,
+            filteredTargetRoots.get(i), filter);
         return found;
       }
     }
     return null;
   }
-  public static EObject getCorrespondingInStructure(List<? extends EObject> originRoots_p,
-      EObject origin_p, List<? extends EObject> targetRoots_p) {
-    return getCorrespondingInStructure(originRoots_p, origin_p, targetRoots_p, null);
+  public static EObject getCorrespondingInStructure(List<? extends EObject> originRoots,
+      EObject origin, List<? extends EObject> targetRoots) {
+    return getCorrespondingInStructure(originRoots, origin, targetRoots, null);
   }
   
   /**
    * Recursive tree-directed deletion
    */
-  public static void deleteRec(EObject elt_p) {
-    List<EObject> contents = elt_p.eContents();
+  public static void deleteRec(EObject elt) {
+    List<EObject> contents = elt.eContents();
     for(EObject child : contents)
       deleteRec(child);
-    EcoreUtil.delete(elt_p);
+    EcoreUtil.delete(elt);
   }
   
   /**
    * Return the union of the content trees of the given elements as an ordered set.
    */
   public static UniqueEList<EObject> getContentSet(
-      Collection<? extends EObject> elts_p) {
+      Collection<? extends EObject> elts) {
     UniqueEList<EObject> result = new UniqueEList<EObject>();
     TreeIterator<EObject> iter;
     EObject current;
-    for(EObject root : elts_p) {
+    for(EObject root : elts) {
       result.add(root);
       iter = root.eAllContents();
       while(iter.hasNext()) {
@@ -328,38 +328,38 @@ public final class MiscUtil {
    * The containment path is defined as a sequence of EReference and Integer
    * (iff the preceding EReference has isMany() == true) corresponding to the
    * top-down navigation of the containment tree.
-   * @param root_p the ancestor
-   * @param child_p the EObject belonging to the eAllContents of the ancestor
-   * @return the containment path (empty iff root_p == child_p) or null if failure
+   * @param root the ancestor
+   * @param child the EObject belonging to the eAllContents of the ancestor
+   * @return the containment path (empty iff root == child) or null if failure
    */
-  private static List<Object> getContainmentPath(EObject root_p, EObject child_p,
-      Filter filter_p) {
+  private static List<Object> getContainmentPath(EObject root, EObject child,
+      Filter filter) {
     LinkedList<Object> result = new LinkedList<Object>(); // A stack would be nicer, but java.util.Stack inherits from Vector
-    boolean success = getContainmentPathRec(root_p, child_p, result, filter_p);
+    boolean success = getContainmentPathRec(root, child, result, filter);
     if (success) return result;
     return null;
   }
-  private static boolean getContainmentPathRec(EObject root_p, EObject child_p,
-      LinkedList<Object> path_p, Filter filter_p) {
-    if (root_p != child_p) {
-      EObject parent = child_p.eContainer();
+  private static boolean getContainmentPathRec(EObject root, EObject child,
+      LinkedList<Object> path, Filter filter) {
+    if (root != child) {
+      EObject parent = child.eContainer();
       if (parent != null) {
-        EReference ref = child_p.eContainmentFeature();
+        EReference ref = child.eContainmentFeature();
         if (ref.isMany()) {
           // Add index
           @SuppressWarnings("unchecked")
           List<EObject> values = (List<EObject>)parent.eGet(ref);
           List<EObject> filteredValues =
-            (null == filter_p)? values: filter_p.filter(values);
-          int index = filteredValues.indexOf(child_p);
-          path_p.addFirst(new Integer(index));
+            (null == filter)? values: filter.filter(values);
+          int index = filteredValues.indexOf(child);
+          path.addFirst(Integer.valueOf(index));
         }
         // Add owning ref
-        path_p.addFirst(ref);
-        return getContainmentPathRec(root_p, parent, path_p, filter_p);
+        path.addFirst(ref);
+        return getContainmentPathRec(root, parent, path, filter);
       }
-      // root_p does not contain child_p
-      path_p.clear();
+      // root does not contain child
+      path.clear();
       return false;
     }
     // else recursion ends
@@ -369,14 +369,14 @@ public final class MiscUtil {
   /**
    * Get the EObject belonging to the eAllContents of the given root EObject and
    * located at the end of the given containment path.
-   * @param root_p the root EObject
-   * @param path_p the containment path
+   * @param root the root EObject
+   * @param path the containment path
    */
-  private static EObject getFromPath(EObject root_p, List<Object> path_p,
-      Filter filter_p) {
-    if (path_p == null) return null;
-    Iterator<Object> it = path_p.iterator();
-    EObject current = root_p;
+  private static EObject getFromPath(EObject root, List<Object> path,
+      Filter filter) {
+    if (path == null) return null;
+    Iterator<Object> it = path.iterator();
+    EObject current = root;
     while (it.hasNext() && current != null) {
       try {
         EReference ref = (EReference)it.next();
@@ -385,7 +385,7 @@ public final class MiscUtil {
           @SuppressWarnings("unchecked")
           List<EObject> values = (List<EObject>)current.eGet(ref);
           List<EObject> filteredValues =
-            (null == filter_p)? values: filter_p.filter(values);
+            (null == filter)? values: filter.filter(values);
           current = filteredValues.get(index.intValue());
         } else {
           current = (EObject)current.eGet(ref);
@@ -400,9 +400,9 @@ public final class MiscUtil {
   /**
    * Assign a new unique ID to the element, if applicable.
    */
-  public static void setNewId(EObject elt_p) {
+  public static void setNewId(EObject elt) {
     try {
-      EcoreUtil.setID(elt_p, IdGenerator.createId());
+      EcoreUtil.setID(elt, IdGenerator.createId());
     } catch (IllegalArgumentException e) {
       // No ID attribute: proceed
     }
@@ -417,14 +417,14 @@ public final class MiscUtil {
     /**
      * Return whether the given element is accepted by the filter
      */
-    public abstract boolean qualifies(EObject obj_p);
+    public abstract boolean qualifies(EObject obj);
     
     /**
      * Return the filtered version of the given collection
      */
-    public final <T extends EObject> List<T> filter(Collection<T> collection_p) {
+    public final <T extends EObject> List<T> filter(Collection<T> collection) {
       List<T> result = new ArrayList<T>();
-      for (T current : collection_p) {
+      for (T current : collection) {
         if (qualifies(current))
           result.add(current);
       }
