@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 THALES GLOBAL SERVICES.
+ * Copyright (c) 2006, 2016 THALES GLOBAL SERVICES.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -65,7 +65,7 @@ public abstract class PropertyValueProperty extends AbstractProperty implements 
 
   public Object getValue(IPropertyContext context) {
     NamedElement element = (NamedElement) getSource(context);
-    return new Integer(getPropertyValue(element));
+    return Integer.valueOf(getPropertyValue(element));
   }
 
   /**
